# AI_Company

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  docs.md  main.py  pyproject.toml  web_try.py
(废弃)web_ui/: .env.example  main.py
(废弃)web_ui/static/css/: style.css
(废弃)web_ui/static/js/: chat.js
Agent/: Agent_Base_.py  Agent_base.py  Agent_list.py  __init__.py  agent.py  agent_tool.py  tools.py
Dumplings/: .gitignore  Agent_Base_.py  Agent_list.py  agent_tool.py  mcp_bridge.py  pyproject.toml
api/: README.md  __init__.py  app.py  deps.py  models.py
api/routes/: __init__.py  agents.py  health.py  mcp.py  skills.py  tools.py
docs/: PROJECT.md  index.md
examples/anthropic_agent/: agent_example.py
examples/api/: agents_config.py
examples/basic_agent/: agent_example.py
examples/multi_agent/: ask_for_help_example.py
mcp/weather_mcp/: weather_server.py
tests/: test_agent_base.py  test_api.py  test_mcp_bridge.py
web_ui/: main.py
web_ui/UI_bake/: __init__.py  constants.py  core.py
web_ui/backend/: main.py
web_ui/frontend/: index.html
web_ui/static/: index.html
web_ui/templates/: chat.html  login.html
