[project]
name = "ai-company"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "lxml>=6.0.2",
    "mcp>=1.14.1",
    "requests>=2.32.5",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
